# sgtdv-fusion

./: CMakeLists.txt  README.md  package.xml
data/: fusion_data_sim_map.csv  fusion_validation.m  processDataFunc.m  ros_interface.m
include/: fusion.h  fusion_kf.h  fusion_ros.h  fusion_synch.h  messages.h
launch/: fusion_rc.launch  fusion_sim.launch
params/: fusion_rc.yaml  fusion_sim.yaml  sensor_model_sim_1.yaml  sensor_model_sim_2.yaml
src/: fusion.cpp  fusion_kf.cpp  fusion_node.cpp  fusion_ros.cpp  fusion_synch.cpp
