<?xml version="1.0"?>
<package format="2">
  <name>fusion</name>
  <version>0.0.0</version>
  <description>The fusion package</description>

  <maintainer email="pknaperek@gmail.com">Patrik Knaperek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sgtdv_msgs</depend>
  <depend>roslib</depend>

</package>
